[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Audio/Menu Music.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/click1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Tilesets/Background.tres" type="TileSet" id=4]
[ext_resource path="res://Tilesets/Snow 2.0/SnowTileSet2.tres" type="TileSet" id=5]
[ext_resource path="res://Player/Red Mage.png" type="Texture" id=6]
[ext_resource path="res://Player/Idle.png" type="Texture" id=7]
[ext_resource path="res://Player/BlueMage/Idle 2.png" type="Texture" id=8]
[ext_resource path="res://Player/BlueMage/Idle 1.png" type="Texture" id=9]
[ext_resource path="res://User Interface/PixelText.tres" type="Theme" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Collect"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524287, 0, 0, 458752, 1, 0, 458753, 1, 0, 458754, 2, 0, 458774, 0, 0, 458775, 1, 0, 458776, 1, 0, 458777, 2, 0, 589823, 3, 0, 524288, 4, 0, 524289, 4, 0, 524290, 5, 0, 524310, 3, 0, 524311, 4, 0, 524312, 4, 0, 524313, 5, 0, 655359, 3, 0, 589824, 4, 0, 589825, 4, 0, 589826, 5, 0, 589846, 3, 0, 589847, 4, 0, 589848, 4, 0, 589849, 5, 0, 720895, 3, 0, 655360, 4, 0, 655361, 4, 0, 655362, 5, 0, 655382, 3, 0, 655383, 4, 0, 655384, 4, 0, 655385, 5, 0, 786431, 3, 0, 720896, 4, 0, 720897, 4, 0, 720898, 5, 0, 720918, 3, 0, 720919, 4, 0, 720920, 4, 0, 720921, 5, 0, 851967, 3, 0, 786432, 4, 0, 786433, 4, 0, 786434, 5, 0, 786454, 3, 0, 786455, 4, 0, 786456, 4, 0, 786457, 5, 0, 917503, 3, 0, 851968, 4, 0, 851969, 4, 0, 851970, 9, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 10, 0, 851991, 4, 0, 851992, 4, 0, 851993, 5, 0, 983039, 3, 0, 917504, 4, 0, 917505, 4, 0, 917506, 4, 0, 917507, 4, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, 4, 0, 917529, 5, 0, 1048575, 6, 0, 983040, 7, 0, 983041, 7, 0, 983042, 7, 0, 983043, 7, 0, 983044, 7, 0, 983045, 7, 0, 983046, 7, 0, 983047, 7, 0, 983048, 7, 0, 983049, 7, 0, 983050, 7, 0, 983051, 7, 0, 983052, 7, 0, 983053, 7, 0, 983054, 7, 0, 983055, 7, 0, 983056, 7, 0, 983057, 7, 0, 983058, 7, 0, 983059, 7, 0, 983060, 7, 0, 983061, 7, 0, 983062, 7, 0, 983063, 7, 0, 983064, 7, 0, 983065, 8, 0 )

[node name="RedMage" type="AnimatedSprite" parent="."]
position = Vector2( 80, 192 )
frames = SubResource( 1 )
animation = "Idle"

[node name="BlueMage" type="AnimatedSprite" parent="."]
position = Vector2( 320, 192 )
frames = SubResource( 2 )
animation = "Idle"
flip_h = true

[node name="Credits" type="Control" parent="."]
visible = false
modulate = Color( 0, 1, 0.392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 224.0
margin_right = -240.0

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/CenterContainer"]
margin_left = 4.0
margin_top = 2.0
margin_right = 156.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="Credits/CenterContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 12.0
text = "Game Created by: The Animator"

[node name="StartMenu" type="Control" parent="."]
modulate = Color( 0, 0.670588, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -88.0

[node name="Title" type="Label" parent="StartMenu/CenterContainer"]
margin_left = 127.0
margin_top = 70.0
margin_right = 272.0
margin_bottom = 82.0
text = "The Red Mage: Catch the Gifts"
align = 1

[node name="TitleContainer" type="CenterContainer" parent="StartMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/TitleContainer"]
margin_left = 165.0
margin_top = 100.0
margin_right = 235.0
margin_bottom = 140.0

[node name="Start" type="Button" parent="StartMenu/TitleContainer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 18.0
text = "Start Game"

[node name="About" type="Button" parent="StartMenu/TitleContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 70.0
margin_bottom = 40.0
text = "How to Play"

[node name="Quit" type="Button" parent="StartMenu/TitleContainer/VBoxContainer"]
visible = false
margin_top = 44.0
margin_right = 70.0
margin_bottom = 62.0
text = "Quit Game"

[node name="HowtoPlay" type="Control" parent="."]
visible = false
modulate = Color( 0, 0.670588, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="HowtoPlay"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HowtoPlay/CenterContainer"]
margin_left = 138.0
margin_top = 59.0
margin_right = 262.0
margin_bottom = 181.0

[node name="Title" type="Label" parent="HowtoPlay/CenterContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 12.0
text = "Guide Menu"
align = 1

[node name="Controls" type="Button" parent="HowtoPlay/CenterContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 124.0
margin_bottom = 34.0
text = "Controls"

[node name="Enemies" type="Button" parent="HowtoPlay/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 124.0
margin_bottom = 78.0
text = "Enemies"

[node name="Objective" type="Button" parent="HowtoPlay/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 124.0
margin_bottom = 56.0
text = "Objective"

[node name="Score" type="Button" parent="HowtoPlay/CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 124.0
margin_bottom = 100.0
text = "Increasing your score"

[node name="Back" type="Button" parent="HowtoPlay/CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 124.0
margin_bottom = 122.0
text = "Back to Main Menu"

[node name="Controls" type="Control" parent="."]
visible = false
modulate = Color( 0, 0.670588, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/CenterContainer"]
margin_left = 116.0
margin_top = 76.0
margin_right = 283.0
margin_bottom = 163.0

[node name="Content" type="Label" parent="Controls/CenterContainer/VBoxContainer"]
margin_right = 167.0
margin_bottom = 87.0
text = "Controls:
Arrow Keys - Movement, Jump
Space Bar - Cast Projectile Spell
Z Key - Switch to Blue Mage
X Key - Switch to Red Mage
Esc Key - Pause"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 115.0

[node name="BackGM" type="Button" parent="Controls/CenterContainer2"]
margin_left = 147.0
margin_top = 53.0
margin_right = 252.0
margin_bottom = 71.0
text = "Back to Guide Menu"

[node name="Objective" type="Control" parent="."]
visible = false
modulate = Color( 0, 0.670588, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="Objective"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Objective/CenterContainer"]
margin_left = 135.0
margin_top = 99.0
margin_right = 265.0
margin_bottom = 141.0

[node name="Content" type="Label" parent="Objective/CenterContainer/VBoxContainer"]
margin_right = 130.0
margin_bottom = 42.0
text = "Objective:
Increase your score until
the time runs out"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="Objective"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 70.0

[node name="BackGMO" type="Button" parent="Objective/CenterContainer2"]
margin_left = 147.0
margin_top = 76.0
margin_right = 252.0
margin_bottom = 94.0
text = "Back to Guide Menu"

[node name="Enemies" type="Control" parent="."]
visible = false
modulate = Color( 0, 0.670588, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="Enemies"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Enemies/CenterContainer"]
margin_left = 116.0
margin_top = 84.0
margin_right = 283.0
margin_bottom = 156.0

[node name="Content" type="Label" parent="Enemies/CenterContainer/VBoxContainer"]
margin_right = 167.0
margin_bottom = 72.0
text = "Enemies:
Red Enemies - Immune to Fire,
Vulnerable to Plasma
Blue Enemies - Immune to Plasma,
Vulnerable to Fire"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="Enemies"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 104.0

[node name="BackGME" type="Button" parent="Enemies/CenterContainer2"]
margin_left = 147.0
margin_top = 59.0
margin_right = 252.0
margin_bottom = 77.0
text = "Back to Guide Menu"

[node name="Score" type="Control" parent="."]
visible = false
modulate = Color( 0, 0.670588, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="Score"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Score/CenterContainer"]
margin_left = 136.0
margin_top = 80.0
margin_right = 264.0
margin_bottom = 159.0

[node name="Content" type="Label" parent="Score/CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 57.0
text = "Getting Scores:
Catching Gifts - +2 Points
Casting Spells - -3 Points
Getting Hit - -10 Points"
align = 1

[node name="BackGMS" type="Button" parent="Score/CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 128.0
margin_bottom = 79.0
text = "Back to Guide Menu"

[connection signal="pressed" from="StartMenu/TitleContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="StartMenu/TitleContainer/VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="StartMenu/TitleContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="HowtoPlay/CenterContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="HowtoPlay/CenterContainer/VBoxContainer/Enemies" to="." method="_on_Enemies_pressed"]
[connection signal="pressed" from="HowtoPlay/CenterContainer/VBoxContainer/Objective" to="." method="_on_Objective_pressed"]
[connection signal="pressed" from="HowtoPlay/CenterContainer/VBoxContainer/Score" to="." method="_on_Score_pressed"]
[connection signal="pressed" from="HowtoPlay/CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Controls/CenterContainer2/BackGM" to="." method="_on_BackGM_pressed"]
[connection signal="pressed" from="Objective/CenterContainer2/BackGMO" to="." method="_on_BackGMO_pressed"]
[connection signal="pressed" from="Enemies/CenterContainer2/BackGME" to="." method="_on_BackGME_pressed"]
[connection signal="pressed" from="Score/CenterContainer/VBoxContainer/BackGMS" to="." method="_on_BackGMS_pressed"]
